--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,20 +2,18 @@
         "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
         "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
-
-
 <web-app version="3.0"
          xmlns="http://java.sun.com/xml/ns/javaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
          metadata-complete="false">
-    <display-name>BudgettingApp</display-name>
+    <display-name>Etf</display-name>
     <context-param>
         <param-name>configuration</param-name>
         <param-value>development</param-value>
     </context-param>
     <filter>
-        <filter-name>wicket.budgetting</filter-name>
+        <filter-name>Etf</filter-name>
         <filter-class>
             org.apache.wicket.protocol.http.WicketFilter
         </filter-class>
@@ -27,7 +25,7 @@
         </init-param>
     </filter>
     <filter-mapping>
-        <filter-name>wicket.budgetting</filter-name>
+        <filter-name>Etf</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
     <listener>
